--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     width: .5rem;
 }
 ::-webkit-scrollbar-track{
-    background-color: transparent;
+    background-color: black;
 }
 body{
     font-family: 'Poppins', sans-serif;
